jenkins/compute_jenkins.tf
data "google_compute_image" "debian" {
  family  = "debian-12"
  project = "debian-cloud"
}


# IP static pentru Jenkins VM
resource "google_compute_address" "jenkins_static_ip" {
  name   = "tlav-jenkins-static-ip"
  region = var.region
}


# Optional Jenkins VM
resource "google_compute_instance" "jenkins" {
  name         = var.jenkins_instance_name
  machine_type = var.jenkins_machine_type
  zone         = var.zone

  boot_disk {
    initialize_params {
      image = data.google_compute_image.debian.self_link
      size  = 30
    }
  }

  network_interface {
    network    = data.google_compute_network.vpc.id
    subnetwork = data.google_compute_subnetwork.subnet.id
    access_config {
      nat_ip = google_compute_address.jenkins_static_ip.address
    }
  }

  service_account {
    email  = "terraform-with-gcp@gd-gcp-internship-devops.iam.gserviceaccount.com"
    scopes = [
      "https://www.googleapis.com/auth/cloud-platform"
    ]
  }

  metadata = {
    ssh-keys = "tlavric:${var.vm_ssh_public_key}"
  }

  tags = ["jenkins-server"]
}

output "jenkins_vm_ip" {
  value = google_compute_address.jenkins_static_ip.address
}
